fix component stratifiers code and value